Add Test cases and java version updated